[gd_scene load_steps=16 format=3 uid="uid://di563ikhs1x8e"]

[ext_resource type="Script" path="res://Scenes/Objects/main_block.gd" id="1_amhtn"]
[ext_resource type="Texture2D" uid="uid://d4lxe6nydd7sl" path="res://Assets/Sprites/main_block.png" id="1_v0xge"]
[ext_resource type="Shader" path="res://Scenes/Objects/outline.gdshader" id="2_o6rh0"]
[ext_resource type="Shader" path="res://Scenes/Objects/solid_color.gdshader" id="2_ohubc"]
[ext_resource type="Texture2D" uid="uid://byolidq1o62tg" path="res://Assets/Sprites/block_shield.png" id="5_bgqke"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yi1y3"]
shader = ExtResource("2_o6rh0")
shader_parameter/color = Color(0.94902, 0.941176, 0.898039, 1)
shader_parameter/width = 0.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aaivi"]
shader = ExtResource("2_ohubc")
shader_parameter/color = Color(0.52549, 0.505882, 0.533333, 1)
shader_parameter/mixture = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6g8sl"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_s0hy4"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bjj5r"]
resource_name = "click"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 2,
"values": [Vector2(0.9, 0.9)]
}

[sub_resource type="Animation" id="Animation_15vhi"]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_xhuey"]
resource_name = "hover"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_t0uju"]
resource_name = "spawn"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vwrot"]
_data = {
"RESET": SubResource("Animation_s0hy4"),
"click": SubResource("Animation_bjj5r"),
"default": SubResource("Animation_15vhi"),
"hover": SubResource("Animation_xhuey"),
"spawn": SubResource("Animation_t0uju")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vg4p8"]
size = Vector2(14, 14)

[node name="main_block" type="Node2D"]
script = ExtResource("1_amhtn")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_yi1y3")
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_v0xge")

[node name="shadow" type="Sprite2D" parent="Sprite2D"]
visible = false
show_behind_parent = true
z_index = -1
material = SubResource("ShaderMaterial_aaivi")
position = Vector2(3, 3)
texture = ExtResource("1_v0xge")

[node name="shield" type="Sprite2D" parent="Sprite2D"]
visible = false
texture = ExtResource("5_bgqke")

[node name="Timer" type="Timer" parent="Sprite2D/shield"]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
shape = SubResource("RectangleShape2D_6g8sl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "spawn"
libraries = {
"": SubResource("AnimationLibrary_vwrot")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("RectangleShape2D_vg4p8")

[connection signal="timeout" from="Sprite2D/shield/Timer" to="." method="_on_timer_timeout"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
